--- a/QuickBug/app/src/main/res/layout/activity_main.xml
+++ b/QuickBug/app/src/main/res/layout/activity_main.xml
@@ -35,20 +35,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/imageButton"
+        <com.naver.maps.map.MapView
+            android:id="@+id/map_view"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:src="@drawable/map"/>
+            />
 
         <LinearLayout
             android:id="@+id/functions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
