--- a/QuickBug/app/src/main/res/layout/activity_main.xml
+++ b/QuickBug/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/MudangStatus"
+            android:id="@+id/seoulweather"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center"
