--- a/QuickBug/app/src/main/res/layout/activity_main.xml
+++ b/QuickBug/app/src/main/res/layout/activity_main.xml
@@ -103,17 +103,54 @@
                     android:textSize="10pt"/>
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btnQR"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_marginLeft="5dp"
-                app:backgroundTint="@null"
-                android:background="@drawable/shape"
-                android:text="무당이 대기 QR"
-                android:textSize="10pt"
-                android:textColor="#000000"/>
+                android:orientation="vertical"
+                android:layout_marginRight="5dp"
+                android:padding="10dp"
+                android:background="@drawable/shape">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:text="이름"
+                    android:textColor="#000000"/>
+
+                <EditText
+                    android:id="@+id/studentname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="이름"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="학번"
+                    android:textColor="#000000"/>
+
+                <EditText
+                    android:id="@+id/studentnumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="학번"/>
+
+                <Button
+                    android:id="@+id/btnQR"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    app:backgroundTint="#58ACFA"
+                    android:text="대기자 QR 체크"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
         <ImageView
