--- a/QuickBug/app/src/main/res/layout/activity_main.xml
+++ b/QuickBug/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         <TextView
             android:id="@+id/seoulweather"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="60dp"
             android:gravity="center"
             android:layout_gravity="center"
             android:text="무당이 운행 여부"
@@ -46,8 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -58,6 +57,43 @@
                 android:padding="10dp"
                 android:background="@drawable/shape">
 
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+                        <EditText
+                            android:id="@+id/hh"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dp"
+                            android:text="시"
+                            android:textColor="#000000" />
+
+                        <EditText
+                            android:id="@+id/mm"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="5dp"
+                            android:text="분"
+                            android:textColor="#000000" />
+
+                    </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -91,16 +127,9 @@
                     app:backgroundTint="#58ACFA"
                     android:text="길찾기"
                     android:textColor="#FFFFFF"
-                    android:textStyle="bold"
-                    />
-                <TextView
-                    android:id="@+id/result"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="결과"
-                    android:textColor="#000000"
-                    android:textSize="10pt"/>
+                    android:textStyle="bold" />
+                </LinearLayout>
+                </ScrollView>
             </LinearLayout>
 
             <LinearLayout
@@ -150,11 +179,10 @@
                     android:textStyle="bold"
                     />
             </LinearLayout>
-
         </LinearLayout>
     </LinearLayout>
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:src="@drawable/mudang" />
 </LinearLayout>
