--- a/QuickBug/app/src/main/res/layout/activity_main.xml
+++ b/QuickBug/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,12 @@
     tools:context=".MainActivity">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="#58ACFA"
-            android:gravity="center_horizontal"
-            android:text="Quick Bug"
-            android:textColor="#FFFFFF"
-            android:textSize="16pt"
-            android:textStyle="bold" />
-
-        <TextView
             android:id="@+id/seoulweather"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
             android:layout_gravity="center"
+            android:paddingTop="10dp"
             android:text="무당이 운행 여부"
             android:textColor="#000000"
             android:textSize="10pt" />
@@ -124,7 +115,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    app:backgroundTint="#58ACFA"
                     android:text="길찾기"
                     android:textColor="#FFFFFF"
                     android:textStyle="bold" />
@@ -173,7 +163,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    app:backgroundTint="#58ACFA"
                     android:text="대기자 QR 체크"
                     android:textColor="#FFFFFF"
                     android:textStyle="bold"
